add multigpu to eval

--- a/phi_1_5.ipynb
+++ b/phi_1_5.ipynb
@@ -99,7 +99,17 @@
    "outputs": [],
    "source": [
     "from torch.utils.data import DataLoader, Dataset, SequentialSampler, RandomSampler,TensorDataset\n",
+    "from torch.utils.data.distributed import DistributedSampler\n",
     "from tqdm.notebook import tqdm\n",
+    "\n",
+    "distributed = False\n",
+    "n_gpu = 1\n",
+    "local_rank = -1\n",
+    "gpu_per_node = -1\n",
+    "per_gpu_eval_batch_size = 8\n",
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "logging_steps = 10\n",
+    "logger = logging.getLogger(\"cur_logger\")\n",
     "\n",
     "\n",
     "def post_process(preds, gts, true_gts, saved_file):\n",
@@ -125,8 +135,6 @@
     "    return cnt\n",
     "\n",
     "def eval_acc(model, tokenizer, output_dir, data_dir, file_type='test'):\n",
-    "    logger = logging.getLogger(\"cur_logger\")\n",
-    "    \n",
     "    eval_dataset = EvalDataset(\n",
     "                            tokenizer=tokenizer,\n",
     "                            output_dir=output_dir,\n",
@@ -134,13 +142,14 @@
     "                            logger=logger,\n",
     "                          )\n",
     "\n",
-    "    batch_size = 12\n",
-    "    device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
-    "    logging_steps = 10\n",
     "\n",
+    "    eval_batch_size = per_gpu_eval_batch_size * max(1, n_gpu)\n",
     "    eval_sampler = SequentialSampler(eval_dataset)\n",
-    "    eval_dataloader = DataLoader(eval_dataset, sampler=eval_sampler, batch_size=batch_size)\n",
+    "    eval_dataloader = DataLoader(eval_dataset, sampler=eval_sampler, batch_size=eval_batch_size)\n",
     "    model.to(device)\n",
+    "\n",
+    "    if n_gpu > 1:\n",
+    "        model = torch.nn.DataParallel(model)\n",
     "\n",
     "    def DecodeIds(idxs):\n",
     "        codes = \"\"\n",
@@ -361,7 +370,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
